--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "rsuite": "^4.10.0"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
