set up tailwindcss

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "start": "PORT=3001 craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
