--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "build:style": "postcss build src/styles/index.css -o src/styles/tailwind.css",
     "start": "PORT=3001 craco start",
     "build": "craco build",
     "test": "craco test",
