--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@craco/craco": "^6.1.2",
     "@material-tailwind/react": "0.3.1",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
