--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cypress": "^7.6.0",
     "eslint-plugin-react": "^7.24.0",
     "postcss-import": "^14.0.1",
     "postcss-nesting": "^8.0.1",
