--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build:style": "postcss build src/styles/index.css -o src/styles/tailwind.css",
     "start": "PORT=3001 craco start",
     "build": "craco build",
-    "test": "yarn cypress run",
-    "test:open": "yarn cypress open",
+    "test": "npx cypress run",
+    "test:open": "npx cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
